tests/error/array_multi_oob.gw
#! [contains] ArrayOutofBounds
var Object[1][1] o;
o[1];
